implement responsive navbar

--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -10,10 +10,14 @@
   <script src="js/main.js"></script>
 </head>
 <body>
-  <header class="flex justify-between align-center px-16">
+  <header class="flex justify-between align-center py-8 px-16 text-bold">
     <span id="fullname"></span>
-    <ul id="menu-options"></ul>
-    <span id="social-options">Contact</span>
+    <div id="menu-toggle" class="menu-toggle">
+      <div class="bar1"></div>
+      <div class="bar2"></div>
+      <div class="bar3"></div>
+    </div>
+    <ul id="menu-options" class="menu-options"></ul>
   </header>
 </body>
 </html>
