--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -5,19 +5,34 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title id="title"></title>
-  <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins&display=swap">
   <link rel="stylesheet" href="css/main.css">
   <script src="js/main.js"></script>
 </head>
 <body>
-  <header class="flex justify-between align-center py-8 px-16 text-bold">
-    <span id="fullname"></span>
-    <div id="menu-toggle" class="menu-toggle">
+  <header class="topbar flex justify-between align-center py-8 text-bold">
+    <h3 id="fullname" class="pl-16"></h3>
+    <div id="menu-toggle" class="menu-toggle pr-16">
       <div class="bar1"></div>
       <div class="bar2"></div>
       <div class="bar3"></div>
     </div>
-    <ul id="menu-options" class="menu-options"></ul>
+    <ul id="menu-options" class="menu-options px-16"></ul>
   </header>
+  <main class="flex flex-column">
+    <section id="about" class="intro flex px-16 mb-32">
+      <!-- <img class="bg-shape circle2" src="assets/ellipse2.svg" />
+      <img class="bg-shape circle1" src="assets/ellipse.svg" />
+      <img class="bg-shape circle3" src="assets/ellipse.svg" /> -->
+      <div class="headline">
+        <h1>My name is Zidane Wright and I'm a student at the University of the West Indies.</h1>
+        <ul id="social-details" class="social-details"></ul>
+      </div>
+    </section>
+    <section id="projects" class="px-16 pb-32 mb-32">
+      <h1>My Projects</h1>
+      <div id="project-listings" class="project-listings"></div>
+    </section>
+  </main>
 </body>
 </html>
