added first draft of ligma 'about bio'

--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -25,7 +25,14 @@
       <img class="bg-shape circle1" src="assets/ellipse.svg" />
       <img class="bg-shape circle3" src="assets/ellipse.svg" /> -->
       <div class="headline">
-        <h1>My name is Zidane Wright and I'm a student at the University of the West Indies.</h1>
+        <span>
+          Ligma Ball is an enthusiastic and talented developer who is always willing to please. 
+          He is curently a student at the University of the West Indies pursuing a major in Computer Science. 
+          Ligma’s passion is web development and he is proficient in HTML, CSS, Javascript and the VueJs web framework. 
+          He pioneered the most relevant web developer union in Jamaica today, the Web Clinic, along with Sugma Dick.
+
+          Ligma also enjoys the thrill of physical manly contact when playing football. He is always willing to try new things and loves receiving gifts. 
+        </span>
         <ul id="social-details" class="social-details"></ul>
       </div>
     </section>
