Updated nav bar elements

--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -10,14 +10,15 @@
   <script src="js/main.js"></script>
 </head>
 <body>
-  <header class="topbar flex justify-between align-center py-8 text-bold">
-    <h3 id="fullname" class="pl-16"></h3>
+  <header class="topbar justify-between align-center py-8 text-bold">
+    <h3 id="fullname" class="fullname pl-16"></h3>
     <div id="menu-toggle" class="menu-toggle pr-16">
       <div class="bar1"></div>
       <div class="bar2"></div>
       <div class="bar3"></div>
     </div>
     <ul id="menu-options" class="menu-options px-16"></ul>
+    <div class="social-container"><ul id="social-details" class="social-details"></ul></div>
   </header>
   <main class="flex flex-column">
     <section id="about" class="intro flex px-16 mb-32">
@@ -26,7 +27,6 @@
       <img class="bg-shape circle3" src="assets/ellipse.svg" /> -->
       <div class="headline">
         <h1>My name is Zidane Wright and I'm a student at the University of the West Indies.</h1>
-        <ul id="social-details" class="social-details"></ul>
       </div>
     </section>
     <section id="projects" class="px-16 pb-32 mb-32">
