Forgot to commit index in last push

--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,6 +10,7 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="js/main.js"></script>
 </head>
+
 <body>
   <header class="topbar justify-between align-center py-8 text-bold">
     <h3 id="fullname" class="fullname pl-16"></h3>
@@ -18,7 +20,9 @@
       <div class="bar3"></div>
     </div>
     <ul id="menu-options" class="menu-options px-16"></ul>
-    <div class="social-container"><ul id="social-details" class="social-details"></ul></div>
+    <div class="social-container">
+      <ul id="social-details" class="social-details"></ul>
+    </div>
   </header>
   <main class="flex flex-column">
     <section id="about" class="intro flex px-16 mb-32">
@@ -35,4 +39,5 @@
     </section>
   </main>
 </body>
+
 </html>
