create new portfolio templates

--- a/portfolio-1/index.html
+++ b/portfolio-1/index.html
@@ -21,9 +21,9 @@
   </header>
   <main class="flex flex-column">
     <section id="about" class="intro flex px-16 mb-32">
-      <!-- <img class="bg-shape circle2" src="assets/ellipse2.svg" />
+      <img class="bg-shape circle2" src="assets/ellipse2.svg" />
       <img class="bg-shape circle1" src="assets/ellipse.svg" />
-      <img class="bg-shape circle3" src="assets/ellipse.svg" /> -->
+      <img class="bg-shape circle3" src="assets/ellipse.svg" />
       <div class="headline">
         <h1>My name is Zidane Wright and I'm a student at the University of the West Indies.</h1>
         <ul id="social-details" class="social-details"></ul>
